# newscite

./: .gitignore  CMakeLists.txt  ReadMe.md
scintilla/: CMakeLists.txt
scintilla/win32/: PlatWin.cxx
scite/: CMakeLists.txt
scite/win32/: SciTERes.rc
